readFileToString(File) is deprecated (Script) closes gmt2001/PhantomBot-1#18